# chatbox-cli

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
src/: config.py  configuration.py
src/chatbox/cli/: interface.py  main.py
src/chatbox/core/: graph.py  graph_controller.py  pipeline.py  state.py
src/chatbox/memory/: asyno_main.py  history.py
src/history/: checkpoints_async.sqlite
