[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbox-cli"
version = "0.1.0"
description = "A command line chatbox interface powered by LangGraph"
readme = "README.md"
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = [
    "dotenv==0.9.9",
    "colorama==0.4.6",
    "click==8.2.1",
    "langgraph==0.4.7",
    "langchain==0.3.25",
    "langchain-openai==0.3.18",
    "langchain-anthropic==0.3.14",
    "langchain-google-genai==2.1.5",
    "langgraph-checkpoint-sqlite==2.0.10",
    "aiosqlite==4.13.2"
]
requires-python = ">=3.13"

[project.scripts]
chatbox = "chatbox.cli.main:cli"